feat: creating components

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -2,8 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-<h1>changes 7</h1>
+<ModuleTitle Title="Hello, world!" />
 
 Welcome to your new app.
