feat: using settings configuration

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,7 +1,17 @@
 ﻿@page "/"
+@inject IConfiguration Configuration
 
 <PageTitle>Home</PageTitle>
 
-<ModuleTitle Title="Hello, world!" />
+<ModuleTitle Title="@HelloMessage" />
 
 Welcome to your new app.
+
+@code {
+    public string HelloMessage = string.Empty;
+
+    protected override void OnInitialized()
+    {
+        HelloMessage = Configuration["HelloMessage"] ?? string.Empty;
+    }
+}
