--- a/Pages/Products/Products.razor
+++ b/Pages/Products/Products.razor
@@ -3,10 +3,13 @@
 @using blazorappdemo.Services
 @inject ILogger<Products> logger;
 @inject IProductService productService;
+@inject NavigationManager NavigationManager;
 
 <PageTitle>Products</PageTitle>
 
 <ModuleTitle Title="Products" />
+
+<button class="btn btn-dark" @onclick="@(()=> NavigationManager.NavigateTo("/addproduct"))">Add Product</button>
 
 @if (products.Count() > 0)
 {
