--- a/Pages/Products/Products.razor
+++ b/Pages/Products/Products.razor
@@ -23,6 +23,10 @@
                     <h4 class="card-title"><b>@product.Title</b></h4>
                     <p class="card-text">@product.Description</p>
                     <p class="card-text"><b>Price: @product.Price.ToString("C")</b></p>
+                    <button title="Edit" class="btn btn-primary btn-edit"
+                        @onclick="@(()=> NavigationManager.NavigateTo($"/editproduct/{product.Id}"))">
+                        <span class="bi bi-pencil"></span>
+                    </button>
                     <button title="Delete" class="btn btn-danger btn-delete" @onclick="@(() => DeleteProduct(product))">
                         <span class="bi bi-trash"></span>
                     </button>
